@@ -1,1 +1,20 @@
 # fxMusic
+-----
+###     info myproject
+## App
+* add VM option intellj Idea
+```
+--module-path /path/to/JavaFX/lib --add-modules=javafx.controls
+--module-path D:/javafx-sdk-18.0.1/lib --add-modules=javafx.controls,javafx.base,javafx.fxml,javafx.media,javafx.swing,javafx.web,javafx.graphics
+```
+-----
+* SDK javafx 
+
+    - [***https://gluonhq.com/products/javafx/***](https://gluonhq.com/products/javafx/)
+
+## Maven
+
+# Tool
+## Just For Windows OS
+ - Just color picker : [***https://just-color-picker.en.lo4d.com/windows***](https://just-color-picker.en.lo4d.com/windows)
+ - App get icons: [***https://icons8.com/app/windows***](https://icons8.com/app/windows)
